рефакторинг класса ObjReader